# 3DViewer_v2.0

./: README.md  README_RUS.md  main.cc
src/: CMakeLists.txt  Makefile  main.cc  main.cpp
src/controller/: controller.cc  controller.cpp  controller.h
src/model/: model.cc  model.cpp  model.h  tranformation.cc  tranformation.h
src/tests/: test_core.cpp  test_core.h  test_model.cc  test_model.cpp
src/view/: OpenGLfunctions.cc  OpenGLfunctions.cpp  events.cc  events.cpp  facade.cc  facade.cpp  saveFormat.cpp  saveSettings.cpp  save_format.cc  save_settings.cc  view.cc  view.cpp  view.h  view.ui
view/: save_format.cc
